--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
         "portal-vue": "^3.0.0",
         "quasar": "^2.16.9",
         "sass": "^1.77.8",
-        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.12.4",
         "vue": "^3.4.38",
         "vue-i18n": "^9.14.0",
-        "vue-moment": "^4.1.0"
+        "vue-moment": "^4.1.0",
+        "vue-sweetalert2": "^5.0.11"
     }
 }
