--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@quasar/vite-plugin": "^1.7.0",
         "@vitejs/plugin-vue": "^5.1.2",
         "laravel-vue-i18n": "^2.7.7",
+        "moment": "^2.30.1",
         "pinia": "^2.2.2",
         "portal-vue": "^3.0.0",
         "quasar": "^2.16.9",
@@ -23,7 +24,6 @@
         "sweetalert2": "^11.12.4",
         "vue": "^3.4.38",
         "vue-i18n": "^9.14.0",
-        "vue-moment": "^4.1.0",
         "vue-sweetalert2": "^5.0.11"
     }
 }
